--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
 Hwllo lab4!
-Added code for the KIII course lab4
-And again update becouse my ngrok address has expired
+And again update becouse my ngrok address has expired!!!!!
